--- a/R/01_data_processing.Rmd
+++ b/R/01_data_processing.Rmd
@@ -13,7 +13,7 @@ library(tidyverse); library(here)
 ```
 
 ```{r}
-d_path <- "data/01_raw_data/goal_actions_ver2/pilot/production-results/"
+d_path <- "data/01_raw_data/goal_actions_ver2/pilotB/sandbox-results/"
 ```
 
 ## Load raw json data
@@ -189,10 +189,21 @@ d_final %<>%
                       action_response_collapsed, 
                       action_response) %>% 
               unique(),
-            by = c("id", "condition")) %>% 
-  mutate(hypothesis_type = factor(hypothesis_type) %>% fct_rev(),
-         slider_response_type_collapsed = factor(slider_response_type_collapsed) %>% fct_rev()) 
+            by = c("id", "condition")
+  )
 ```
+
+Clean up the hypothesis variable.
+
+```{r}
+d_final %<>%
+  rowwise() %>% 
+  mutate(hypothesis = str_sub(hypothesis, 
+                                   start = 1, 
+                                   end = str_locate(hypothesis, "music")[1] - 1)
+         )
+```
+
 
 ## Write to disk. 
 
