--- a/writing/cogsci2018/cogsci2018.tex
+++ b/writing/cogsci2018/cogsci2018.tex
@@ -52,7 +52,7 @@
 \title{Learning in social context}
 
 
-\author{{\large \bf Erica J. Yoon}, {\large \bf Kyle MacDonald}, \and {\large \bf Mika Asaba} \\ \{ejyoon, kylem4, masaba\} @stanford.edu \\ Department of Psychology, Stanford University}
+\author{{\large \bf Erica J. Yoon*}, {\large \bf Kyle MacDonald*}, {\large \bf Mika Asaba}, {\large \bf Hyowon Gweon}, \and {\large \bf Michael C. Frank} \\ \{ejyoon, kylem4, masaba, hyo, mcfrank\} @stanford.edu \\ Department of Psychology, Stanford University \\ *These authors contributed equally to this work.}
 
 \begin{document}
 
