--- a/R/01_data_processing.Rmd
+++ b/R/01_data_processing.Rmd
@@ -13,7 +13,7 @@ library(tidyverse); library(here)
 ```
 
 ```{r}
-d_path <- "data/01_raw_data/goal_actions_ver2/pilotB/sandbox-results/"
+d_path <- "data/01_raw_data/goal_actions_ver2/pilotB/production-results/"
 ```
 
 ## Load raw json data
@@ -200,10 +200,8 @@ d_final %<>%
   rowwise() %>% 
   mutate(hypothesis = str_sub(hypothesis, 
                                    start = 1, 
-                                   end = str_locate(hypothesis, "music")[1] - 1)
-         )
+                                   end = str_locate(hypothesis, "music")[1] - 1))
 ```
-
 
 ## Write to disk. 
 
