--- a/R/02_visualization.Rmd
+++ b/R/02_visualization.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 ## Setup
 
 ```{r}
-library(magrittr); library(tidyverse); library(here) 
+library(knitr); library(magrittr); library(tidyverse); library(here)
 theme_set(theme_minimal())
 ```
 
@@ -20,6 +20,23 @@ Read data.
 d_path <- "data/02_tidy_data/"
 d_file_name <- "goal_actions_ver2_tidy_pilot.csv"
 d <- read_csv(here(d_path, d_file_name)) 
+```
+
+```{r}
+d %<>% mutate(hypothesis_type = factor(hypothesis_type) %>% fct_rev(),
+              hypothesis = factor(hypothesis) %>% fct_rev())
+```
+
+## Data checks
+
+How many participants in each condition?
+
+```{r}
+d %>% 
+  select(id, condition) %>% 
+  unique() %>% 
+  count(condition) %>% 
+  kable()
 ```
 
 ## Table of comments
@@ -32,12 +49,6 @@ d %>%
   knitr::kable()
 ```
 
-```{r}
-d %<>% mutate(hypothesis_type = factor(hypothesis_type) %>% fct_rev(),
-              hypothesis = factor(hypothesis) %>% fct_rev())
-```
-
-
 ## Prior and posterior beliefs
 
 Now summarise and plot.
@@ -49,11 +60,12 @@ d %>%
   ggplot(aes(x = hypothesis, y = m, fill = condition)) +
   geom_bar(stat = "identity", width = 0.4, position = position_dodge()) +
   geom_hline(yintercept = 0.3, linetype = "dashed") +
-  lims(y = c(0,1)) +
-  scale_fill_grey() +
-  ggthemes::theme_few() +
+  lims(y = c(0,0.55)) +
+  #scale_fill_grey() +
+  ggthemes::scale_fill_ptol() +
   theme(legend.position = "top",
-        axis.text.x = element_text(angle = 45, vjust = 0.5)) +
+        axis.text.x = element_text(angle = 45, vjust = 0.5),
+        panel.border = element_rect(fill=NA, size=0.5, color = "grey")) +
   facet_wrap(~hypothesis_type)
 ```
 
@@ -71,9 +83,9 @@ d %>%
   ggplot(aes(x = action_response, y = prop, fill = condition)) +
   geom_bar(stat = "identity", width = 0.4, position = position_dodge()) +
   lims(y = c(0,1)) +
-  scale_fill_grey() +
-  facet_grid(.~condition)
-  
+  ggthemes::scale_fill_ptol() +
+  facet_grid(.~condition) +
+  theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"))
 ```
 
 Make a table of the raw counts.
@@ -83,6 +95,7 @@ d %>%
   select(condition, action_response, id) %>% 
   unique() %>% 
   count(action_response, condition) %>% 
+  arrange(condition, action_response) %>% 
   knitr::kable()
 ```
 
@@ -109,35 +122,24 @@ d %>%
   ggplot(aes(x = action_trial_time)) +
   geom_histogram() + 
   labs(x = c("time (sec)")) +
-  facet_wrap(~condition)
+  facet_wrap(~condition, ncol = 1) +
+  theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"))
 ```
 
 ## Plot belief change
 
-```{r}
-d %>% 
-  ggplot(aes(x = hypothesis_type, y = slider_value_normalized, color = condition)) +
-  geom_line(aes(group = id), size = 1) + 
-  geom_jitter(width = 0.03, size = 2) +
-  facet_wrap(~hypothesis) +
-  lims(y = c(0,1)) +
-  langcog::scale_color_solarized() +
-  ggthemes::theme_few() +
-  theme(legend.position = "top")
-```
-
-Now make the same plot, but as a function of which action participants chose
+here we plot belief change as a function of condition and the action that participants chose.
 
 ```{r}
 d %>% 
   ggplot(aes(x = hypothesis_type, y = slider_value_normalized, 
-             color = condition,
-             linetype = action_response)) +
+             color = action_response)) +
   geom_line(aes(group = id), size = 0.5) + 
   geom_jitter(width = 0, size = 2) +
-  facet_grid(~hypothesis) +
   lims(y = c(0,1)) +
-  langcog::scale_color_solarized() +
-  ggthemes::theme_few() +
-  theme(legend.position = "top")
+  labs(x = NULL, y = "Belief") + 
+  facet_grid(hypothesis~condition) +
+  ggthemes::scale_color_ptol() +
+  theme(legend.position = "top",
+        panel.border = element_rect(fill=NA, size=0.5, color = "grey"))
 ```
