edits to model section

--- a/writing/cogsci2018/library.bib
+++ b/writing/cogsci2018/library.bib
@@ -1,5 +1,5 @@
 @inproceedings{yoon2017,
-	Author = {Yoon, Erica J. and Tessler, Michael Henry and Goodman, Noah D. and Frank, Michael C.},
+	Author = {Yoon, Erica J and Tessler, Michael Henry and Goodman, Noah D and Frank, Michael C},
 	Booktitle = {Proceedings of the Thirty-Ninth Annual Conference of the {C}ognitive {S}cience {S}ociety},
 	Title = {``I won't lie, it wasn't amazing'': Modeling polite indirect speech},
 	Year = {2017}}
@@ -19,4 +19,43 @@
   author={MacKay, David JC},
   year={2003},
   publisher={Cambridge university press}
+}
+
+@article{jara2016,
+  title={The na{\"\i}ve utility calculus: computational principles underlying commonsense psychology},
+  author={Jara-Ettinger, Julian and Gweon, Hyowon and Schulz, Laura E and Tenenbaum, Joshua B},
+  journal={Trends in cognitive sciences},
+  volume={20},
+  number={8},
+  pages={589--604},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{goodman2016,
+	Author = {Goodman, Noah D and Frank, Michael C},
+	Date-Added = {2017-02-01 17:52:37 +0000},
+	Date-Modified = {2017-02-01 17:52:40 +0000},
+	Journal = {Trends in Cognitive Sciences},
+	Number = {11},
+	Pages = {818--829},
+	Publisher = {Elsevier},
+	Title = {Pragmatic language interpretation as probabilistic inference},
+	Volume = {20},
+	Year = {2016}}
+
+@article{coenen2017,
+  title={Asking the right questions about human inquiry},
+  author={Coenen, Anna and Nelson, Jonathan D and Gureckis, Todd},
+  year={2017},
+  publisher={PsyArXiv}
+}
+
+@article{lindley1956,
+  title={On a measure of the information provided by an experiment},
+  author={Lindley, Dennis V},
+  journal={The Annals of Mathematical Statistics},
+  pages={986--1005},
+  year={1956},
+  publisher={JSTOR}
 }
