--- a/writing/cogsci2018/cogsci2018.Rmd
+++ b/writing/cogsci2018/cogsci2018.Rmd
@@ -25,6 +25,7 @@ knitr::opts_chunk$set(fig.width=3, fig.height=3, fig.crop = F, fig.pos = "tb", f
 ```{r, libraries}
 library(png)
 library(grid)
+library(gridExtra)
 library(ggplot2)
 library(xtable)
 ```
@@ -37,34 +38,57 @@ A simple case study of situations where people have to decide between informatio
 
 # Computational model
 
-Our model works under the same key assumption as that in recent computational models of social cognition: that people act approximately optimally given a utility function. In @yoon2017, the speaker’s total utility was represented as a weighted combination of informational and social utilities, reflecting a principled tradeoff between the two utilities. Similarly, we propose a model of a learner who considers different utilities and chooses to prioritize one over another. We consider three utilities: *learning*, *performance*, and *presentational*.
+A key assumption underlying inferences in recent formal models of social cognition is that 
+people act approximately optimally given a utility function [e.g. @goodman2016; @jara2016]. 
+Our model operates under the same principle of an approximately optimal agent, 
+who reasons about the utility function that represents a combination of multiple goals. 
+In @yoon2017, the utility function comprised a weighted combination of multiple utilities (goals) considered by the speaker, 
+reflecting a principled tradeoff between different communicative goals 
+(e.g. to be informative, to make the listener feel good, and to appear to be a helpful speaker). 
+We use a similarly structured utility function that reflects 
+different goals that a learner has in a social learning context.
+Specifically, we model how a person may make a decision to act based on 
+his desire to learn how a toy works (*learning utility*), 
+to make the toy operate and perform a given function (*performance utility*), 
+or to present himself as a competent individual who knows how to make the toy work (*presentational utility*; 
+see the model diagram in Figure 1).
 
-First, the *learning utility* is represented by an OED model, which quantifies the *expected utility* of different information seeking actions. The set of queries is defined as $Q_1, Q_2, ..., Q_n = {Q}$. The expected utility of each query ($EU(Q)$) is a function of two factors: (1) the probability of obtaining a specific answer
-$P(a)$ weighted by (2) the usefulness of that answer for achieving the learning goal $U(a)$.
+```{r model_diagram, fig.env = "figure*", fig.pos = "h", fig.width=12, fig.height=8, fig.align = "center", set.cap.width=T, num.cols.cap=2, fig.cap = "Diagram of the computational model: The learner considers possible hypotheses and his contextual goals. When an observer is absent, he considers his learning goal (to maximize information gain) and performance goal (to play music) and decides on an action. When an observer is present, his decision for an action is based on his learning goal vs. presentational goal (to have the observer infer his competence)."}
+img1 <-  rasterGrob(as.raster(readPNG("figs/model-obsAbs.png")), interpolate = FALSE)
+img2 <-  rasterGrob(as.raster(readPNG("figs/model-obsPres.png")), interpolate = FALSE)
+grid.arrange(img1, img2, ncol = 1)
+```
+
+First, the *learning utility* symbolizes the goal to learn new information, which in our paradigm specifically is associated with figuring out how a given toy works. The learning utility is formally represented by an OED model ["Optimal Experiment Design"; @nelson2005; @lindley1956], which quantifies the *expected utility* of different information seeking actions. Here we follow the mathematical details of the OED approach as outlined in @coenen2017 that was implemented in our model. The set of queries, each realized through taking an action, is defined as $Q_1, Q_2, ..., Q_n = {Q}$. The expected utility of each query ($EU(Q)$) is a function of two factors: (1) the probability of obtaining a specific answer $P(a)$ weighted by (2) the usefulness of that answer for achieving the learning goal $U(a)$.
 
 $$EU(Q) = \sum_{a\in q}{P(a)U(a)}$$
 
-There are a variety of ways to define the usefulness function to score each answer (for a detailed analysis of different approaches, see @nelson2005). One standard method is to use *information gain*, which is defined as the change in the learner's overall uncertainty (difference in entoropy) before and after receiving an answer.
+There are a variety of ways to define the usefulness function to score each answer (for a detailed analysis of different approaches, see @nelson2005). One standard method is to use *information gain*, which is defined as the change in the learner's overall uncertainty (difference in entropy) before and after receiving an answer. This information gain is then the usefulness of the answer to the query, and thus is equal to the learning utility:
 
 $$ U_{learning} = U(a) = ent(H) - ent(H|a)$$
-
-Where $ent(H)$ is defined using Shannon entropy \footnote{Shannon entropy is a measure of unpredictability or amount of uncertainty in the learner's probability distribution over hypotheses. Intuitively, higher entropy distributions are more uncertain and harder to predict. For example, if the learner believes that all hypotheses are equally likely, then they are in a state of high uncertainty/entropy. In contrast, if the learner firmly believes in one hypothesis, then uncertainty/entropy is low.} @mackay2003, which provides a measure of the overall amount of uncertainty in the learner's beliefs about the candidate hypotheses. 
+\noindent
+where $ent(H)$ is defined using Shannon entropy\footnote{Shannon entropy is a measure of unpredictability or amount of uncertainty in the learner's probability distribution over hypotheses. Intuitively, higher entropy distributions are more uncertain and harder to predict. For example, if the learner believes that all hypotheses are equally likely, then they are in a state of high uncertainty/entropy. In contrast, if the learner firmly believes in one hypothesis, then uncertainty/entropy is low.}. @mackay2003, which provides a measure of the overall amount of uncertainty in the learner's beliefs about the candidate hypotheses. 
 
 $$ent(H) = -\sum_{a\in A}{P(h)log_2P(h)}$$
-
+\noindent
 The conditional entropy computation is the same, but takes into account the change in the learner's beliefs after seeing an answer.
 
 $$ ent(H|a) = -\sum_{h\in H}{P(h|a)logP(h|a)} $$
-
+\noindent
 To calculate the change in the learner's belief in a hypothesis $P(h|a)$, we use Bayes rule. 
 
 $$ P(h|a) = \frac{P(h)P(a|h)}{P(a)} $$ 
 
+\noindent
 The learner performs the expected utility computation for each query in the set of possible queries and picks the one that maximizes utility. In practice, the learner considers each possible answer, scores the answer with the usefulness function, and weights the score using the probability of getting that answer. 
+In our paradigm, a learner thinking about the learning utility considers acting on the toy one way over another, and computes how informative a given answer should be in reducing uncertainty about how the toy works.
 
 Second, the *performance utility* is the utility of successfully making the toy operate. Specifically within our current paradigm, the performance utility is the expected utility of music playing ($m$) given the learner's action $a$. 
 
 $$ U_{performance} = \ln(P_L(m | a)) $$
+\noindent
+Thus, performance utility is maximized by taking an action that is most likely to make the toy "go" and play music, which is the operation of interest.
+
 When there is no observer present, the learner considers the tradeoff between the learning utility and performance utility, and he determines his action based on a weighted combination of the two utilities: 
 
 $$ U(a;\phi; obs = no) = \phi \cdot U_{learning} + (1-\phi) \cdot U_{performance} ,$$
@@ -75,7 +99,7 @@ When there is another person present to observe the learner's action, this obser
 
 $$ P_O(c) \propto P_L(m | a)$$
 
-The learner thinks about how the observer infers the learner's competence, and the *presentational* utility then is based on maximizing the apparent competence inferred by the observer.
+The learner thinks about how the observer infers the learner's competence, and his *presentational* utility is based on maximizing the apparent competence inferred by the observer.
 
 $$ U_{presentation} = \ln(P_O(c)) $$
 Thus, when there is an observer present, the learner considers the tradeoff between the learning utility and presentational utility: 
@@ -91,7 +115,7 @@ $$ P_L(a | \phi, obs) \propto \exp(\lambda \cdot \mathbb{E}[U(a;\phi; obs)])$$
 
 ### Participants
 
-FIXME participants with IP addresses in the United States were recruited on Amazon’s Mechanical Turk.
+FIXME participants with IP addresses in the United States were recruited on Amazon’s Mechanical Turk. We excluded FIXME partcipants who failed to answer manipulation check questions correctly (See Procedure section for details on the manipulation check questions), and thus the remaining FIXME participants were included in our final analysis.
 
 ### Stimuli and Design
 
@@ -101,7 +125,7 @@ We presented a story to the participants that their boss motivated a goal the pa
 
 ### Procedure
 
-Participants were first introduced to the task and shown a picture of a toy with labels on its parts. Then they read instructions for each of the three toys, after which they were asked what they would do to make the toy play music and to make it turn on the light, to make sure they understood the instructions. We then asked participants to rate prior likelihood that an unknown toy is a ButtonMusic toy, HandleMusic toy, or BothMusicLight toy. Participants read a scenario for one of the three goal conditions, and the following instruction: "If you only had one chance to try a SINGLE action to [goal], which action would you want to take? You will get a 10 cent bonus after submitting the HIT if you [goal]." After selecting a response out of three possible actions, the participants were asked again to rate the likelihood for which toy the unlabeled toy was. The experiment can be viewed at https://langcog.stanford.edu/expts/EJY/soc-info/goal_actions_ver2/soc_info_goals.html.
+Participants were first introduced to the task and shown a picture of a toy with labels on its parts. Then they read instructions for each of the three toys, after which they were asked what they would do to make the toy play music and to make it turn on the light, to make sure they understood the instructions. Participants who answered these manipulation check questions incorrectly were excluded from our final analysis. We then asked participants to rate prior likelihood that an unknown toy is a ButtonMusic toy, HandleMusic toy, or BothMusicLight toy. Participants read a scenario for one of the three goal conditions, and the following instruction: "If you only had one chance to try a SINGLE action to [goal], which action would you want to take? You will get a 10 cent bonus after submitting the HIT if you [goal]." After selecting a response out of three possible actions, the participants were asked again to rate the likelihood for which toy the unlabeled toy was. The experiment can be viewed at https://langcog.stanford.edu/expts/EJY/soc-info/goal_actions_ver2/soc_info_goals.html.
 
 # Results
 
