--- a/writing/cogsci2018/cogsci2018.tex
+++ b/writing/cogsci2018/cogsci2018.tex
@@ -75,23 +75,49 @@ information gain and self-presentation,
 
 \section{Computational model}\label{computational-model}
 
-Our model works under the same key assumption as that in recent
-computational models of social cognition: that people act approximately
-optimally given a utility function. In Yoon, Tessler, Goodman, \& Frank
-(2017), the speaker's total utility was represented as a weighted
-combination of informational and social utilities, reflecting a
-principled tradeoff between the two utilities. Similarly, we propose a
-model of a learner who considers different utilities and chooses to
-prioritize one over another. We consider three utilities:
-\emph{learning}, \emph{performance}, and \emph{presentational}.
+A key assumption underlying inferences in recent formal models of social
+cognition is that people act approximately optimally given a utility
+function (e.g. Goodman \& Frank, 2016; Jara-Ettinger, Gweon, Schulz, \&
+Tenenbaum, 2016). Our model operates under the same principle of an
+approximately optimal agent, who reasons about the utility function that
+represents a combination of multiple goals. In Yoon, Tessler, Goodman,
+\& Frank (2017), the utility function comprised a weighted combination
+of multiple utilities (goals) considered by the speaker, reflecting a
+principled tradeoff between different communicative goals (e.g.~to be
+informative, to make the listener feel good, and to appear to be a
+helpful speaker). We use a similarly structured utility function that
+reflects different goals that a learner has in a social learning
+context. Specifically, we model how a person may make a decision to act
+based on his desire to learn how a toy works (\emph{learning utility}),
+to make the toy operate and perform a given function (\emph{performance
+utility}), or to present himself as a competent individual who knows how
+to make the toy work (\emph{presentational utility}; see the model
+diagram in Figure 1).
 
-First, the \emph{learning utility} is represented by an OED model, which
-quantifies the \emph{expected utility} of different information seeking
-actions. The set of queries is defined as \(Q_1, Q_2, ..., Q_n = {Q}\).
-The expected utility of each query (\(EU(Q)\)) is a function of two
-factors: (1) the probability of obtaining a specific answer \(P(a)\)
-weighted by (2) the usefulness of that answer for achieving the learning
-goal \(U(a)\).
+\begin{CodeChunk}
+\captionsetup{width=0.8\textwidth}\begin{figure*}[h]
+
+{\centering \includegraphics{figs/model_diagram-1} 
+
+}
+
+\caption[Diagram of the computational model]{Diagram of the computational model: The learner considers possible hypotheses and his contextual goals. When an observer is absent, he considers his learning goal (to maximize information gain) and performance goal (to play music) and decides on an action. When an observer is present, his decision for an action is based on his learning goal vs. presentational goal (to have the observer infer his competence).}\label{fig:model_diagram}
+\end{figure*}
+\end{CodeChunk}
+
+First, the \emph{learning utility} symbolizes the goal to learn new
+information, which in our paradigm specifically is associated with
+figuring out how a given toy works. The learning utility is formally
+represented by an OED model (Lindley, 1956; ``Optimal Experiment
+Design''; Nelson, 2005), which quantifies the \emph{expected utility} of
+different information seeking actions. Here we follow the mathematical
+details of the OED approach as outlined in Coenen, Nelson, \& Gureckis
+(2017) that was implemented in our model. The set of queries, each
+realized through taking an action, is defined as
+\(Q_1, Q_2, ..., Q_n = {Q}\). The expected utility of each query
+(\(EU(Q)\)) is a function of two factors: (1) the probability of
+obtaining a specific answer \(P(a)\) weighted by (2) the usefulness of
+that answer for achieving the learning goal \(U(a)\).
 
 \[EU(Q) = \sum_{a\in q}{P(a)U(a)}\]
 
@@ -99,42 +125,49 @@ There are a variety of ways to define the usefulness function to score
 each answer (for a detailed analysis of different approaches, see Nelson
 (2005)). One standard method is to use \emph{information gain}, which is
 defined as the change in the learner's overall uncertainty (difference
-in entoropy) before and after receiving an answer.
+in entropy) before and after receiving an answer. This information gain
+is then the usefulness of the answer to the query, and thus is equal to
+the learning utility:
 
-\[ U_{learning} = U(a) = ent(H) - ent(H|a)\]
-
-Where \(ent(H)\) is defined using Shannon entropy
-\footnote{Shannon entropy is a measure of unpredictability or amount of uncertainty in the learner's probability distribution over hypotheses. Intuitively, higher entropy distributions are more uncertain and harder to predict. For example, if the learner believes that all hypotheses are equally likely, then they are in a state of high uncertainty/entropy. In contrast, if the learner firmly believes in one hypothesis, then uncertainty/entropy is low.}
+\[ U_{learning} = U(a) = ent(H) - ent(H|a)\] \noindent
+where \(ent(H)\) is defined using Shannon
+entropy\footnote{Shannon entropy is a measure of unpredictability or amount of uncertainty in the learner's probability distribution over hypotheses. Intuitively, higher entropy distributions are more uncertain and harder to predict. For example, if the learner believes that all hypotheses are equally likely, then they are in a state of high uncertainty/entropy. In contrast, if the learner firmly believes in one hypothesis, then uncertainty/entropy is low.}.
 MacKay (2003), which provides a measure of the overall amount of
 uncertainty in the learner's beliefs about the candidate hypotheses.
 
-\[ent(H) = -\sum_{a\in A}{P(h)log_2P(h)}\]
-
+\[ent(H) = -\sum_{a\in A}{P(h)log_2P(h)}\] \noindent
 The conditional entropy computation is the same, but takes into account
 the change in the learner's beliefs after seeing an answer.
 
-\[ ent(H|a) = -\sum_{h\in H}{P(h|a)logP(h|a)} \]
-
+\[ ent(H|a) = -\sum_{h\in H}{P(h|a)logP(h|a)} \] \noindent
 To calculate the change in the learner's belief in a hypothesis
 \(P(h|a)\), we use Bayes rule.
 
 \[ P(h|a) = \frac{P(h)P(a|h)}{P(a)} \]
 
+\noindent
 The learner performs the expected utility computation for each query in
 the set of possible queries and picks the one that maximizes utility. In
 practice, the learner considers each possible answer, scores the answer
 with the usefulness function, and weights the score using the
-probability of getting that answer.
+probability of getting that answer. In our paradigm, a learner thinking
+about the learning utility considers acting on the toy one way over
+another, and computes how informative a given answer should be in
+reducing uncertainty about how the toy works.
 
 Second, the \emph{performance utility} is the utility of successfully
 making the toy operate. Specifically within our current paradigm, the
 performance utility is the expected utility of music playing (\(m\))
 given the learner's action \(a\).
 
-\[ U_{performance} = \ln(P_L(m | a)) \] When there is no observer
-present, the learner considers the tradeoff between the learning utility
-and performance utility, and he determines his action based on a
-weighted combination of the two utilities:
+\[ U_{performance} = \ln(P_L(m | a)) \] \noindent
+Thus, performance utility is maximized by taking an action that is most
+likely to make the toy ``go'' and play music, which is the operation of
+interest.
+
+When there is no observer present, the learner considers the tradeoff
+between the learning utility and performance utility, and he determines
+his action based on a weighted combination of the two utilities:
 
 \[ U(a;\phi; obs = no) = \phi \cdot U_{learning} + (1-\phi) \cdot U_{performance} ,\]
 \noindent
@@ -149,8 +182,8 @@ work.
 \[ P_O(c) \propto P_L(m | a)\]
 
 The learner thinks about how the observer infers the learner's
-competence, and the \emph{presentational} utility then is based on
-maximizing the apparent competence inferred by the observer.
+competence, and his \emph{presentational} utility is based on maximizing
+the apparent competence inferred by the observer.
 
 \[ U_{presentation} = \ln(P_O(c)) \] Thus, when there is an observer
 present, the learner considers the tradeoff between the learning utility
@@ -170,7 +203,10 @@ action \(a\) approximately optimally (as per optimality parameter
 \subsubsection{Participants}\label{participants}
 
 FIXME participants with IP addresses in the United States were recruited
-on Amazon's Mechanical Turk.
+on Amazon's Mechanical Turk. We excluded FIXME partcipants who failed to
+answer manipulation check questions correctly (See Procedure section for
+details on the manipulation check questions), and thus the remaining
+FIXME participants were included in our final analysis.
 
 \subsubsection{Stimuli and Design}\label{stimuli-and-design}
 
@@ -214,15 +250,17 @@ Participants were first introduced to the task and shown a picture of a
 toy with labels on its parts. Then they read instructions for each of
 the three toys, after which they were asked what they would do to make
 the toy play music and to make it turn on the light, to make sure they
-understood the instructions. We then asked participants to rate prior
-likelihood that an unknown toy is a ButtonMusic toy, HandleMusic toy, or
-BothMusicLight toy. Participants read a scenario for one of the three
-goal conditions, and the following instruction: ``If you only had one
-chance to try a SINGLE action to {[}goal{]}, which action would you want
-to take? You will get a 10 cent bonus after submitting the HIT if you
-{[}goal{]}.'' After selecting a response out of three possible actions,
-the participants were asked again to rate the likelihood for which toy
-the unlabeled toy was. The experiment can be viewed at
+understood the instructions. Participants who answered these
+manipulation check questions incorrectly were excluded from our final
+analysis. We then asked participants to rate prior likelihood that an
+unknown toy is a ButtonMusic toy, HandleMusic toy, or BothMusicLight
+toy. Participants read a scenario for one of the three goal conditions,
+and the following instruction: ``If you only had one chance to try a
+SINGLE action to {[}goal{]}, which action would you want to take? You
+will get a 10 cent bonus after submitting the HIT if you {[}goal{]}.''
+After selecting a response out of three possible actions, the
+participants were asked again to rate the likelihood for which toy the
+unlabeled toy was. The experiment can be viewed at
 \url{https://langcog.stanford.edu/expts/EJY/soc-info/goal_actions_ver2/soc_info_goals.html}.
 
 \section{Results}\label{results}
@@ -239,6 +277,25 @@ PGSD3-454094-2014 to EJY \ldots{} FIXME.
 \setlength{\parindent}{-0.1in} \setlength{\leftskip}{0.125in} \noindent
 
 \hypertarget{refs}{}
+\hypertarget{ref-coenen2017}{}
+Coenen, A., Nelson, J. D., \& Gureckis, T. (2017). Asking the right
+questions about human inquiry.
+
+\hypertarget{ref-goodman2016}{}
+Goodman, N. D., \& Frank, M. C. (2016). Pragmatic language
+interpretation as probabilistic inference. \emph{Trends in Cognitive
+Sciences}, \emph{20}(11), 818--829.
+
+\hypertarget{ref-jara2016}{}
+Jara-Ettinger, J., Gweon, H., Schulz, L. E., \& Tenenbaum, J. B. (2016).
+The naïve utility calculus: Computational principles underlying
+commonsense psychology. \emph{Trends in Cognitive Sciences},
+\emph{20}(8), 589--604.
+
+\hypertarget{ref-lindley1956}{}
+Lindley, D. V. (1956). On a measure of the information provided by an
+experiment. \emph{The Annals of Mathematical Statistics}, 986--1005.
+
 \hypertarget{ref-mackay2003}{}
 MacKay, D. J. (2003). \emph{Information theory, inference and learning
 algorithms}. Cambridge university press.
