--- a/R/03_models.Rmd
+++ b/R/03_models.Rmd
@@ -10,87 +10,83 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 ## Setup
 
 ```{r}
-library(magrittr); library(tidyverse); library(here); library(rstanarm) 
-theme_set(theme_minimal())
-```
-
-Read data. 
-
-```{r}
-d_path <- "data/02_tidy_data/"
-d <- read_csv(here(d_path, "goal_actions_tidy_pilotB.csv"))
-```
-
-## Model condition difference in action selection 
-
-```{r}
-d_model <- d %>% 
-  select(id, condition, action_response_collapsed) %>% 
-  unique() %>% 
-  mutate(action_numeric = ifelse(action_response_collapsed == "single_button", 0, 1))
-```
-
-Treat as binary response -> logistic regression. No repeated measurements, so we don't model random effects.
-
-```{r}
-m_bglm <- stan_glm(
-  action_numeric ~ condition, # specify model formula the same way as in glm
-  data = d_model,
-  family = binomial(link = "logit"), 
-  prior_intercept = normal(0, 10),
-  chains = 4
-)
-```
-
-Get a dataframe: One row per posterior sample
-
-```{r}
-# make function to convert logit back to probability 
-logit_to_prob <- function(logit) {
-  odds <- exp(logit)
-  odds / (1 + odds)
+logit_to_prob <- function(x) {
+  odds <- exp(x)
+  prob <- odds / (1 + odds)
+  prob
 }
 ```
 
 ```{r}
-d_post <- m_bglm %>% 
-  as.data.frame() %>% 
-  as_tibble() %>% 
-  dplyr::rename(learning = `(Intercept)`,
-                performance_beta = conditionperformance) %>% 
-  mutate(performance = learning + performance_beta,
-         cond_difference = learning - performance, 
-         sample_id = 1:n()) %>% 
-  select(-performance_beta) %>% 
-  gather(key = condition, value = param_est, -sample_id) %>% 
-  mutate(acc_prob_scale = logit_to_prob(param_est))
+library(magrittr); library(tidyverse); library(here); library(rstanarm) 
+library(brms)
+theme_set(theme_minimal() + theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"))) 
 ```
 
-Plot posterior over condition means.
+```{r}
+options(mc.cores=parallel::detectCores ()) # Run on multiple cores
+```
+Read data. 
 
 ```{r}
-group_means <- d_post %>% 
-  filter(condition != "cond_difference") %>% 
-  ggplot(aes(x = acc_prob_scale, color = condition)) +
-  geom_line(stat = "density", size = 2) +
-  scale_color_grey() +
-  labs(x = "Prob. Select Two Buttons", y = "Density") +
-  theme(legend.position = "top")
+d_path <- "data/02_tidy_data/"
+d_file_name <- "goal_actions_ver2_tidy_pilot.csv"
+d <- read_csv(here(d_path, d_file_name)) 
 ```
 
-Plot posterior distribution over condition difference.
+## Model condition difference in action selection
+
+Since there were three options, I think we need to use a softmax or multinomial regression. No repeated measurements, so we don't model random effects. From [this](https://www.analyticsvidhya.com/blog/2016/02/multinomial-ordinal-logistic-regression/) article:
+
+> The multinomial logistic regression estimates a separate binary logistic regression model for each dummy variables.  The result is M-1 binary logistic regression models.  Each model conveys the effect of predictors on the probability of success in that category, in comparison to the reference category.
+
+> Remember, multinomial logistic regression reports the odds of being in the different outcome categories in reference to some base group.
+
+> Because of the indeterminacy in the regression coe cients, we can interpret the regression coe cients only relative to the reference category. In softmax regression, the regression coeficients can be conceived in terms of the log odds of each outcome relative to the reference outcome:
 
 ```{r}
-cond_diff <- d_post %>% 
-  filter(condition == "cond_difference") %>% 
-  ggplot(aes(x = param_est)) +
+d_model <- d %>% 
+  select(id, condition, action_response) %>% 
+  unique() %>% 
+  mutate(condition_fact = factor(condition, 
+                                 levels = c("presentation", "learning", "performance")),
+         action_response_fact = factor(action_response, 
+                                       levels = c("button", "handle", "both")))
+```
+
+```{r}
+set.seed (3875)
+
+m <- brm(action_response_fact ~ condition_fact,
+             data=d_model,
+             family="categorical", 
+             prior=c(set_prior ("normal (0, 8)")))
+summary(m)
+```
+
+Extract and clean up the posterior samples.
+
+```{r}
+tidy_samples <- posterior_samples(m, "b") %>% 
+  mutate(sample_id = seq(1, n())) %>% 
+  gather(key = param_name, value = estimate, -sample_id) %>% 
+  mutate(param_name = str_replace(param_name, "b_mu", ""),
+         param_name = str_replace(param_name, "condition_fact", ""),
+         estimate_prob = logit_to_prob(estimate)) %>% 
+  separate(param_name, into = c("model", "param_name")) 
+```
+
+Plot posterior distributions over model params. 
+
+```{r}
+tidy_samples %>% 
+  filter(model == "both") %>% 
+  ggplot(aes(x = estimate)) + 
+  geom_line(stat = "density", size = 1.5) +
   geom_vline(xintercept = 0, linetype = "dashed") +
-  geom_line(stat = "density", size = 2) +
-  scale_color_grey() +
-  labs(x = "Condition Diff. (logit scale)", y = "Density") 
+  lims(x = c(-7, 7)) +
+  facet_grid(param_name~model, scales = "free_x") +
+  labs(title = "Posterior distribution over logit model predicting the 'both' action",
+       subtitle = "Reference group is the 'presentation' condition and 'button' action",
+       x = "estimate (logit scale)")
 ```
-
-```{r}
-cowplot::plot_grid(group_means, cond_diff)
-```
-
