--- a/R/02_visualization.Rmd
+++ b/R/02_visualization.Rmd
@@ -18,7 +18,7 @@ Read data.
 
 ```{r}
 d_path <- "data/02_tidy_data/"
-d_file_name <- "goal_actions_ver2_tidy_pilot.csv"
+d_file_name <- "goal_actions_ver3_tidy_pilot.csv"
 d <- read_csv(here(d_path, d_file_name)) 
 ```
 
@@ -49,11 +49,11 @@ d %>%
   kable()
 ```
 
-How many participants did not pass the manipulation checks?
+How many participants passed the manipulation checks?
 
 ```{r}
 d %>% 
-  filter(manip_check_score >= 3) %>% 
+  filter(manip_check_score >= 2) %>% 
   distinct(id, condition) %>% 
   count(condition) %>% 
   kable()
@@ -62,7 +62,7 @@ d %>%
 Now filter if the participant got fewer than 3 out of 3 manipulation checks correct. 
 
 ```{r}
-d_filt <- d %>% filter(manip_check_score == 3)
+d %<>% filter(manip_check_score >= 3)
 ```
 
 ## Prior and posterior beliefs
@@ -76,7 +76,7 @@ d %>%
   ggplot(aes(x = hypothesis, y = m, fill = condition)) +
   geom_bar(stat = "identity", width = 0.4, position = position_dodge()) +
   geom_hline(yintercept = 0.3, linetype = "dashed") +
-  lims(y = c(0,0.55)) +
+  lims(y = c(0,0.5)) +
   #scale_fill_grey() +
   ggthemes::scale_fill_ptol() +
   theme(legend.position = "top",
@@ -90,7 +90,7 @@ d %>%
 Plot counts of different action responses for the learning vs. performance goal conditions.
 
 ```{r}
-no_filt_plot <- d %>% 
+d %>% 
   select(condition, action_response, id) %>% 
   unique() %>% 
   count(action_response, condition) %>% 
@@ -101,28 +101,7 @@ no_filt_plot <- d %>%
   lims(y = c(0,1)) +
   ggthemes::scale_fill_ptol() +
   facet_grid(.~condition) +
-  theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey")) +
-  ggtitle("Not filtered")
-```
-
-```{r}
-filt_plot <- d_filt %>% 
-  select(condition, action_response, id) %>% 
-  unique() %>% 
-  count(action_response, condition) %>% 
-  group_by(condition) %>% 
-  mutate(prop = n / sum(n)) %>% 
-  ggplot(aes(x = action_response, y = prop, fill = condition)) +
-  geom_bar(stat = "identity", width = 0.4, position = position_dodge()) +
-  lims(y = c(0,1)) +
-  ggthemes::scale_fill_ptol() +
-  facet_grid(.~condition) +
-  theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey")) +
-  ggtitle("Filtered")
-```
-
-```{r}
-cowplot::plot_grid(no_filt_plot, filt_plot)
+  theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey")) 
 ```
 
 Make a table of the raw counts.
