--- a/R/03_models.Rmd
+++ b/R/03_models.Rmd
@@ -30,7 +30,7 @@ Read data.
 
 ```{r}
 d_path <- "data/02_tidy_data/"
-d_file_name <- "goal_actions_ver2_tidy_pilot.csv"
+d_file_name <- "goal_actions_ver3_tidy_pilot.csv"
 d <- read_csv(here(d_path, d_file_name)) 
 ```
 
@@ -45,11 +45,13 @@ Since there were three options, I think we need to use a softmax or multinomial 
 > Because of the indeterminacy in the regression coe cients, we can interpret the regression coe cients only relative to the reference category. In softmax regression, the regression coeficients can be conceived in terms of the log odds of each outcome relative to the reference outcome:
 
 ```{r}
-d_model <- d %>% 
+d_model <- d %>%
+  filter(manip_check_score == 3) %>% 
   select(id, condition, action_response) %>% 
   unique() %>% 
   mutate(condition_fact = factor(condition, 
-                                 levels = c("presentation", "learning", "performance")),
+                                 levels = c("nogoal", "presentation", "learning", 
+                                            "performance")),
          action_response_fact = factor(action_response, 
                                        levels = c("button", "handle", "both")))
 ```
@@ -84,9 +86,9 @@ tidy_samples %>%
   ggplot(aes(x = estimate)) + 
   geom_line(stat = "density", size = 1.5) +
   geom_vline(xintercept = 0, linetype = "dashed") +
-  lims(x = c(-7, 7)) +
+  #lims(x = c(-7, 7)) +
   facet_grid(param_name~model, scales = "free_x") +
   labs(title = "Posterior distribution over logit model predicting the 'both' action",
-       subtitle = "Reference group is the 'presentation' condition and 'button' action",
+       subtitle = "Reference group is the 'no-goal' condition and 'button' action",
        x = "estimate (logit scale)")
 ```
