--- a/R/02_visualization.Rmd
+++ b/R/02_visualization.Rmd
@@ -11,7 +11,10 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 
 ```{r}
 library(knitr); library(magrittr); library(tidyverse); library(here)
-theme_set(theme_minimal())
+theme_set(theme_minimal() +
+            theme(legend.position = "top",
+                  axis.text.x = element_text(angle = 0, vjust = 0.5),
+                  panel.border = element_rect(fill=NA, size=0.5, color = "grey")))
 ```
 
 Read data. 
@@ -24,7 +27,7 @@ d_prior_name <- "goal_actions_prior_tidy.csv"
 d_prior <- read_csv(here(d_path, d_prior_name))
 
 ## action/beliefs data
-d_file_name <- "goal_actions_ver3_tidy_pilot.csv"
+d_file_name <- "goal_actions_ver3_tidy_full_sample.csv"
 d <- read_csv(here(d_path, d_file_name)) 
 ```
 
@@ -37,11 +40,12 @@ d %<>% mutate(hypothesis_type = factor(hypothesis_type) %>% fct_rev(),
 
 ```{r}
 d %>% 
-  select(id, age, condition, about, comment) %>% 
+  select(id, age, condition, about) %>% 
   unique() %>% 
   arrange(condition) %>% 
-  sample_n(10) %>% 
-  knitr::kable()
+  group_by(condition) %>% 
+  sample_n(size = 5) %>% 
+  kable()
 ```
 
 ## Data checks and filtering
@@ -54,6 +58,16 @@ d %>%
   unique() %>% 
   count(condition) %>% 
   kable()
+```
+
+How did participants do on the manipulation checks?
+
+```{r}
+d %>% 
+  select(id, manip_check_score) %>% 
+  unique() %>% 
+  pull(manip_check_score) %>% 
+  qplot()
 ```
 
 How many participants passed the manipulation checks?
@@ -77,7 +91,10 @@ d %<>% filter(manip_check_score >= 2)
 Make table. 
 
 ```{r}
-d_prior %>% select(id, action_response, why_action) %>% kable()
+d_prior %>% 
+  select(id, action_response, why_action) %>% 
+  sample_n(size = 15) %>% 
+  kable()
 ```
 
 Plot distribution over actions.
@@ -108,7 +125,6 @@ d %>%
   geom_bar(stat = "identity", width = 0.4, position = position_dodge()) +
   geom_hline(yintercept = 0.3, linetype = "dashed") +
   lims(y = c(0,0.5)) +
-  #scale_fill_grey() +
   ggthemes::scale_fill_ptol() +
   theme(legend.position = "top",
         axis.text.x = element_text(angle = 45, vjust = 0.5),
@@ -160,10 +176,11 @@ Plot the distribution of overall time on the experiment across conditions.
 ```{r}
 d %>% 
   select(id, experiment_time, condition) %>% 
+  filter(experiment_time <= 2 * sd(experiment_time)) %>% 
   unique() %>% 
   ggplot(aes(x = condition, y = experiment_time / 60)) +
   geom_boxplot(width = 0.3) +
-  lims(y = c(0,max(d$experiment_time / 60))) +
+  lims(y = c(0,8)) +
   labs(y = "Time (min)")
 ```
 
@@ -172,10 +189,11 @@ Make the same plot, but for the time spent on the action decision.
 ```{r}
 d %>% 
   select(id, action_trial_time, condition) %>% 
+  filter(action_trial_time <= 1 * sd(action_trial_time)) %>% 
   unique() %>% 
   ggplot(aes(x = condition, y = action_trial_time)) +
   geom_boxplot(width = 0.3) +
-  labs(x = c("time (sec)")) +
+  labs(y = c("time (sec)"), x= NULL) +
   theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"))
 ```
 
@@ -195,4 +213,24 @@ d %>%
   ggthemes::scale_color_ptol() +
   theme(legend.position = "top",
         panel.border = element_rect(fill=NA, size=0.5, color = "grey"))
+```
+
+Get the total belief change for each participant and plot as a function of condition.
+
+```{r fig.width=8, out.width="80%", fig.asp = "0.6"}
+d %>% 
+  select(id, condition, hypothesis, hypothesis_type, slider_value_normalized, 
+         action_response) %>% 
+  spread(key = hypothesis_type, slider_value_normalized) %>% 
+  mutate(belief_change = (prior - posterior) %>% abs()) %>% 
+  mutate(action_belief = ifelse(action_response == hypothesis, TRUE, FALSE)) %>% 
+  filter(action_belief == TRUE) %>% 
+  group_by(id, condition, action_response) %>% 
+  summarise(ss_m = mean(belief_change)) %>% 
+  ggplot(aes(x = action_response, y = ss_m, color = condition)) +
+  geom_violin(draw_quantiles = 0.5, trim = T, width = 1, size = 1, 
+              adjust = 1, fill = NA) +
+  geom_jitter(width = 0.07, alpha = 1, shape = 21, color = "darkgrey") +
+  ggthemes::scale_color_ptol() +
+  facet_wrap(~condition, ncol = 4) 
 ```
