added a placeholder for learning-presentation link in lit

--- a/writing/cogsci2018/library.bib
+++ b/writing/cogsci2018/library.bib
@@ -4,6 +4,28 @@
 	Title = {``I won't lie, it wasn't amazing'': Modeling polite indirect speech},
 	Year = {2017}}
 	
+@article{bonawitz2011,
+  title={The double-edged sword of pedagogy: Instruction limits spontaneous exploration and discovery},
+  author={Bonawitz, Elizabeth and Shafto, Patrick and Gweon, Hyowon and Goodman, Noah D and Spelke, Elizabeth and Schulz, Laura},
+  journal={Cognition},
+  volume={120},
+  number={3},
+  pages={322--330},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{markant2014,
+  title={Is it better to select or to receive? Learning via active and passive hypothesis testing.},
+  author={Markant, Douglas B and Gureckis, Todd M},
+  journal={Journal of Experimental Psychology: General},
+  volume={143},
+  number={1},
+  pages={94},
+  year={2014},
+  publisher={American Psychological Association}
+}
+	
 @article{nelson2005,
   title={Finding useful questions: On Bayesian diagnosticity, probability, impact, and information gain},
   author={Nelson, Jonathan D},
@@ -46,7 +68,7 @@
 
 @article{coenen2017,
   title={Asking the right questions about human inquiry},
-  author={Coenen, Anna and Nelson, Jonathan D and Gureckis, Todd},
+  author={Coenen, Anna and Nelson, Jonathan D and Gureckis, Todd M},
   year={2017},
   publisher={PsyArXiv}
 }
@@ -59,3 +81,45 @@
   year={1956},
   publisher={JSTOR}
 }
+
+@book{sutton1998,
+  title={Introduction to reinforcement learning},
+  author={Sutton, Richard S and Barto, Andrew G},
+  volume={135},
+  year={1998},
+  publisher={MIT Press Cambridge}
+}
+
+@article{gureckis2012,
+  title={Self-directed learning: A cognitive and computational perspective},
+  author={Gureckis, Todd M and Markant, Douglas B},
+  journal={Perspectives on Psychological Science},
+  volume={7},
+  number={5},
+  pages={464--481},
+  year={2012},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{elliott1988,
+  title={Goals: An approach to motivation and achievement.},
+  author={Elliott, Elaine S and Dweck, Carol S},
+  journal={Journal of personality and social psychology},
+  volume={54},
+  number={1},
+  pages={5},
+  year={1988},
+  publisher={American Psychological Association}
+}
+
+@article{dweck1988,
+  title={A social-cognitive approach to motivation and personality.},
+  author={Dweck, Carol S and Leggett, Ellen L},
+  journal={Psychological review},
+  volume={95},
+  number={2},
+  pages={256},
+  year={1988},
+  publisher={American Psychological Association}
+}
+
