--- a/writing/cogsci2018/cogsci2018.Rmd
+++ b/writing/cogsci2018/cogsci2018.Rmd
@@ -32,23 +32,35 @@ library(xtable)
 
 # Introduction
 
-If you were to cook a meal for yourself, would you want to follow a recipe you have tried before, or try a new recipe? The familiar recipe would ensure a good meal, but the new recipe might turn out to be even better, despite some risk that it might not. How would your decision change if the meal was for a date? Or for a charitable cooking teacher?
+Imagine you had to cook a meal for yourself. Would you want to follow a recipe you have tried before, or venture a new recipe? The familiar recipe would ensure a good meal, but the new recipe might turn out to be even better, despite some risk that it might not. How would your decision change if the meal was for a date? Or for a charitable cooking teacher?
 
-We often face what is commonly known as "exploration-exploitation dilemma" [@sutton1998], where we need to choose between pursuing an overt, readily accessible reward based on our prior knowledge (*exploitation*) versus pursuing discovery of new knowledge that can yield a better reward in the long-term (*exploration*). 
-How do we go about choosing between these two options?
-We may consider our goals associated with each of the options, and how much we want to achieve each goal relative to others: Do I want to learn a new way of cooking, or secure a decent meal? 
-There may also be contextual factors at hand: Am I by myself, or is there a person whom I want to impress with a delicious meal?
-In this work, we seek to explain how people may behave given an exploration-exploitation dilemma, by (1) formalizing the tradeoff between an agent's goals for exploration versus exploitation, and (2) considering ways in which the social context (e.g. the presence of another person) may play a role. 
+We often face such "exploration-exploitation dilemma" [@sutton1998], in which we have to choose between an overt, readily accessible reward based on what we already know (*exploitation*), and a search for discovery of knowledge that we do not yet have (*exploration*). 
+How do we decide whether to explore or to exploit?
+We may think about our goals associated with each of the options, 
+and how much we want to achieve each goal relative to others: 
+Do I want to learn a new way of cooking, or secure a decent meal? 
+We may also consider contextual factors that affect how much we prioritize each goal: 
+For example, am I by myself, or is there a person whom I want to impress with a delicious meal?
+An agent can have a mixture of exploration and exploitation goals that conflict with each other.
+In this work, we seek to explain how people may behave given an exploration-exploitation dilemma, by (1) formalizing the tradeoff between an agent's goals for exploration versus exploitation, and (2) considering ways in which the social context (e.g. the presence of another person) may play a role in how much value is placed on each goal instantiation. 
 
 One prominent case study that shows people's exploratory behaviors is *active learning* (also known as "self-directed" learning), or active construction of their own learning experience by making informative queries or exploring unknown contingencies [@nelson2005; @sutton1998; @gureckis2012]. 
 Active learning research has focused on whether the context of self-directed learning presents advantages in acquiring and processing more information for the learner (see @gureckis2012). 
 We are not always alone in a learning context, however; often there are teachers, peer learners, or other people around that might affect our learning process and outcome. 
 Indeed, when adults and children receive pedagogical instructions from a teacher or view actions of another learner, they show different rate of learning or exploratory information-seeking behaviors [@bonawitz2011; @markant2014].
 
-But what role does the *social* factor play on self-directed learning? 
+But what role does the *social* factor play on self-directed learning?
 For example, can a learner's action choices differ based on the presence of an observer, regardless of whether the observer provides relevant information for learning?
-One possible answer is that a learner will infer what the observer thinks about the learner, e.g. how *competent* the learner is, based on what the learner did (cook a meal) and its outcome (a delicious meal). 
-Then the learner will choose between exploration and exploitation that will likely maximize favorable impression of the learner to the observer.
+Instead of a learning goal, a learner may prioritize reputation management:
+looking more attractive, knowledgeable, or competent to an observer. 
+In such case, the learner will infer what the observer thinks about the learner based on what the learner did (cook a meal) and its outcome (a delicious meal). 
+Then the learner will choose between exploration and exploitation that will likely maximize favorable impression of the learner to the observer ('That meal was delicious, so he must be a good cook!').
+
+The link between self-directed learning and self-presentation to others is unclear. 
+Self-presentational concerns affect people's prosocial and cheating behaviors (FIXME: cite).
+Socially elicited goals to prioritize presenting oneself as competent 
+changes people's task choices and responses to difficulty [@elliott1988; @dweck1988].
+But no work has looked at how the social pressure based on another person's presence influences people's strategies to act in a self-directed learning environment.
 
 We present a computational model formalizing the exploration-exploitation tradeoff in an active learning environment with social pressures. 
 The model shows that the agent's goal preference may change depending on the social context, in the presence or absence of another person. 
